# llm-translator-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.cn.md  README.fr.md  README.ge.md  README.it.md  README.ja.md  README.kr.md  README.md  README.ru.md  README.uk.md  build.rs  settings.toml
.github/workflows/: release.yml
cross/: Dockerfile.aarch64-unknown-linux-gnu
ext/: llm_translator_rust.h
src/: attachments.rs  backup.rs  build_env.rs  correction.rs  data.rs  details.rs  dictionary.rs  history_tags.rs  lib.rs  logging.rs  main.rs  mcp.rs  model_registry.rs  ocr.rs  paths.rs  report.rs  settings.rs  test_util.rs  translation_ignore.rs  translator.rs
src/attachments/: cache.rs  code.rs  mime_detect.rs  mod.rs  office.rs  text.rs  util.rs
src/attachments/media/: mod.rs
src/attachments/media/audio/: mod.rs
src/attachments/media/image/: mod.rs
src/attachments/media/ocr/: debug.rs  mod.rs
src/attachments/media/pdf/: mod.rs
src/ext/: config.rs  error.rs  mod.rs  run.rs  runtime.rs  settings.rs
src/languages/: afr.toml  amh.toml  ara.toml  ben.toml  bul.toml  cat.toml  ces.toml  cym.toml  dan.toml  deu.toml  ell.toml  eng.toml  eus.toml  fin.toml  fra.toml  gle.toml  glg.toml  guj.toml  heb.toml  hin.toml  hrv.toml  hun.toml  ind.toml  isl.toml  iso_639.json  ita.toml  jpn.toml  kan.toml  kor.toml  mal.toml  mar.toml  mod.rs  nld.toml  nor.toml  pan.toml  pol.toml  por.toml  ron.toml  rus.toml  slk.toml  (+13 more)
src/ocr/: font.rs  mod.rs  render.rs
src/ocr/engine/: geom.rs  layout.rs  merge.rs  mod.rs  parse.rs  preprocess.rs  tesseract.rs  text.rs
src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs  retry.rs
src/providers/snapshots/: llm_translator_rust__providers__claude__tests__claude_extract_tool_args_snapshot.snap  llm_translator_rust__providers__gemini__tests__gemini_extract_tool_args_snapshot.snap  llm_translator_rust__providers__openai__tests__openai_extract_tool_args_snapshot.snap
src/server/: client.rs  handlers.rs  mod.rs  models.rs  state.rs  translate.rs  util.rs
src/translations/: mod.rs
src/translations/prompts/: correction_prompt.tera  details_prompt.tera  history_tags_prompt.tera  mime_prompt.tera  ocr_normalize_prompt.tera  ocr_romanize_prompt.tera  pos_prompt.tera  report_prompt.tera  system_prompt.tera
src/translations/templates/: client.html.tera  report.html.tera  report.xml.tera
tests/: prompt_snapshot.rs
tests/fixtures/: claude_tool_response.json  gemini_tool_response.json  openai_tool_response.json
tests/snapshots/: prompt_snapshot__system_prompt_snapshot.snap
