[package]
name = "llm-translator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tera = "1.20"
toml = "0.8"

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }
