[package]
name = "llm-translator-rust"
version = "0.1.7"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
infer = "0.16"
md5 = "0.7"
image = "0.25"
tempfile = "3"
axum = { version = "0.7", features = ["json"] }
resvg = { version = "0.45", default-features = false, features = ["text", "raster-images"] }
tiny-skia = "0.11"
usvg = "0.45"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tera = "1.20"
toml = "0.8"
quick-xml = "0.31"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
printpdf = { version = "0.6", features = ["embedded_images"] }
ttf-parser = { version = "0.25", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
whisper-rs = { version = "0.11", features = ["whisper-cpp-tracing"] }
hound = "3"
num_cpus = "1"
futures-util = "0.3"
kuchiki = "0.8"
globset = "0.4"

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }
